Issue #15 "non-readable digits" resolved

--- a/catalog/view/theme/OPC040084/stylesheet/stylesheet.css
+++ b/catalog/view/theme/OPC040084/stylesheet/stylesheet.css
@@ -5,7 +5,9 @@ html {
 }
 body {
 	 color: #7F7355;
-    font-family: 'Marcellus',Arial,Helvetica,sans-serif;
+	 
+    /* Issue #15 font-family: 'Marcellus',Arial,Helvetica,sans-serif; */
+    font-family: Arial,Helvetica,sans-serif;
     font-size: 14px;
 	line-height:20px;
 	margin: 0px;
@@ -943,7 +945,8 @@ input.button {
 
 	height: 28px;
 	padding: 0px 12px 0px 12px;
-	font-family: 'Marcellus',Arial,Helvetica,sans-serif;
+    /* Issue #15 font-family: 'Marcellus',Arial,Helvetica,sans-serif; */
+    font-family: Arial,Helvetica,sans-serif;
 	 
 }
 .ie7 input.button  { padding:0 3px; } 
